demopaymentsapp/virtual-services/config-service-vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: config-service-vs
spec:
  hosts:
    - "*"
  gateways:
    - payments-app-gw
  http:
    - match:
            #leave other users unaffected
         - uri:
            prefix: /config-service/
      rewrite:
        uri: /api/
      route:
        - destination:
            host: config-service.default.svc.cluster.local
            port:
              number: 80
            subset: v1 #no payments service
