demopaymentsapp/virtual-services/demopaymentsapp-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payments-app-vs
spec:
  hosts:
    - "*"
  gateways:
    - payments-app-gw
  http:
    - route:
      - destination:
          port:
            number: 80
          host: payments-app.default.svc.cluster.local
