demopaymentsapp/virtual-services/transfer-service-vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transfer-service-vs
spec:
  hosts:
    - "*"
  gateways:
    - payments-app-gw
  http:
    - match:
        - uri:
            prefix: /transfer-service/
      rewrite:
        uri: /api/
      route:
        - destination:
            host: transfer-service.default.svc.cluster.local
            port:
              number: 80

---
