demopaymentsapp/virtual-services/user-profile-vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-profile-vs
spec:
  hosts:
    - "*"
  gateways:
    - payments-app-gw
  http:
    - match:
        - uri:
            prefix: /user-profile/
      rewrite:
        uri: /api/
      route:
        - destination:
            host: user-profile.default.svc.cluster.local
            port:
              number: 80

---
